# static-la

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: add.rs  add_assign.rs  add_columns.rs  add_rows.rs  bitand.rs  bitand_assign.rs  bitor.rs  bitor_assign.rs  bitxor.rs  bitxor_assign.rs  blas.rs  dims.rs  display.rs  distribution.rs  div.rs  div_assign.rs  fmt.rs  from.rs  index.rs  iter.rs  lib.rs  matmul.rs  mul.rs  mul_assign.rs  neg.rs  not.rs  partial_eq.rs  rem.rs  rem_assign.rs  slice.rs  sub.rs  sub_assign.rs  sums.rs  transpose.rs  try_from.rs
