[package]
name = "static-la"
version = "0.1.0"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3" # Benching
rand = "0.8.5" # Testing + Benching
nalgebra = "0.30.1" # Comparison
ndarray = "0.15.4" # Comparison
ndarray-rand = "0.14.0" # Comparison

[[bench]]
name = "benchmarks"
harness = false