[package]
name = "static-la"
version = "0.2.2"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"

description = "A linear algebra library with excellent type safety."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/static-la"
documentation = "https://docs.rs/static-la/"
readme = "README.md"

categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
distribution = ["rand"]

[dependencies]
rand = { version = "0.8.5", optional = true }
openblas-src = "0.10.4"
cblas = "0.4.0"

[dev-dependencies]
criterion = "0.3" # Benching
rand = "0.8.5" # Testing + Benching
nalgebra = "0.30.1" # Comparison
ndarray = "0.15.4" # Comparison
ndarray-rand = "0.14.0" # Comparison

[[bench]]
name = "benchmarks"
harness = false